--- a/css/main.css
+++ b/css/main.css
@@ -356,6 +356,32 @@ body {
       width: calc(100% + 20px);
       height: calc(100% + 20px); }
 
+/* Sticky navbar */
+.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.98);
+  box-shadow: 0 2px 2px #efefef;
+  z-index: 9999;
+  padding: 0 10rem; }
+  .sticky .navbar__list {
+    margin: 2rem 0; }
+  .sticky .navbar__list li a:link,
+  .sticky .navbar__list li a:visited {
+    padding: 0 0;
+    color: #1a3163; }
+
+.sticky .navbar__logo {
+  display: none; }
+
+.sticky .logo-dark {
+  display: block; }
+  @media (max-width: 37.5em) {
+    .sticky .logo-dark {
+      display: none; } }
+
 .header {
   width: auto;
   height: 60vh;
@@ -372,26 +398,32 @@ body {
   @media (max-width: 56.25em) {
     .header {
       padding: 2rem 2rem; } }
-  .header .navbar {
+  .header .navbar,
+  .header .sticky {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1); }
-    .header .navbar__list {
+    .header .navbar__list,
+    .header .sticky__list {
       display: block;
       /*Activete and Deactivate navbar*/ }
       @media (max-width: 37.5em) {
-        .header .navbar__list {
+        .header .navbar__list,
+        .header .sticky__list {
           display: none; } }
-    .header .navbar__logo {
+    .header .navbar__logo,
+    .header .sticky__logo {
       margin: -3rem;
       padding: 0 3rem;
       height: auto; }
       @media (max-width: 37.5em) {
-        .header .navbar__logo {
+        .header .navbar__logo,
+        .header .sticky__logo {
           margin: 4.5rem 0; } }
-    .header .navbar__list-item {
+    .header .navbar__list-item,
+    .header .sticky__list-item {
       line-height: 1.43;
       font-weight: 600;
       text-align: center;
@@ -401,9 +433,14 @@ body {
       text-decoration: none;
       color: #ffffff;
       font-size: 1.4rem; }
-      .header .navbar__list-item a {
+      .header .navbar__list-item a,
+      .header .sticky__list-item a {
         color: #ffffff;
         text-decoration: none; }
+  .header .navbar .navbar__logo {
+    display: block; }
+  .header .navbar .logo-dark {
+    display: none; }
   .header .ticket__steps {
     margin: 4rem 0; }
     @media (max-width: 37.5em) {
