--- a/css/main.css
+++ b/css/main.css
@@ -377,7 +377,10 @@ body {
   display: none; }
 
 .sticky .logo-dark {
-  display: block; }
+  display: block;
+  margin: -3rem;
+  padding: 0 3rem;
+  height: auto; }
   @media (max-width: 37.5em) {
     .sticky .logo-dark {
       display: none; } }
